cmake_minimum_required(VERSION 3.12)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(771 "Jewels and Stones/771.cpp")
add_executable(461 "Hamming Distance/461.cpp")
add_executable(617 "Merge Two Binary Trees/617.cpp")
add_executable(338 "Counting Bits/338.cpp")
add_executable(104 "Maximum Depth of Binary Tree/104.cpp")
add_executable(136 "Single Number/136.cpp")
add_executable(739 "Daily Temperatures/739.cpp")
add_executable(406 "Queue Reconstruction by Height/406.cpp")
add_executable(647 "Palindromic Substrings/647.cpp")
add_executable(94 "Binary Tree Inorder Traversal/94.cpp")
add_executable(46 Permutations/46.cpp)
add_executable(238 "Product of Array Except Self/238.cpp")
add_executable(22 "Generate Parentheses/22.cpp")
add_executable(347 "Top K Frequent Elements/347.cpp")
add_executable(206 "Reverse Linked List/206.cpp")
add_executable(283 "Move Zeroes/283.cpp")
add_executable(448 "Find All Numbers Disappeared in an Array/448.cpp")
add_executable(78 Subsets/78.cpp)
add_executable(169 "Majority Element/169.cpp")
add_executable(538 "Convert BST to Greater Tree/538.cpp")
add_executable(287 "Find the Duplicate Number/287.cpp")
add_executable(48 "Rotate Image/48.cpp")
add_executable(39 "Combination Sum/39.cpp")
add_executable(102 "Binary Tree Level Order Traversal/102.cpp")
add_executable(337 "House Robber III/337.cpp")
add_executable(1 "Two Sum/1.cpp")
add_executable(215 "Kth Largest Element in an Array/215.cpp")
add_executable(62 "Unique Paths/62.cpp")
add_executable(399 "Evaluate Division/399.cpp")
add_executable(121 "Best Time to Buy and Sell Stock/121.cpp")
add_executable(64 "Minimum Path Sum/64.cpp")
add_executable(49 "Group Anagrams/49.cpp")
add_executable(543 "Diameter of Binary Tree/543.cpp")
add_executable(96 "Unique Binary Search Trees/96.cpp")
add_executable(621 "Task Scheduler/621.cpp")
add_executable(101 "Symmetric Tree/101.cpp")
add_executable(70 "Climbing Stairs/70.cpp")
add_executable(437 "Path Sum III/437.cpp")
add_executable(394 "Decode String/394.cpp")
add_executable(11 "Container With Most Water/11.cpp")
add_executable(114 "Flatten Binary Tree to Linked List/114.cpp")
add_executable(75 "Sort Colors/75.cpp")
add_executable(560 "Subarray Sum Equals K/560.cpp")
add_executable(309 "Best Time to Buy and Sell Stock with Cooldown/309.cpp")
add_executable(494 "Target Sum/494.cpp")
add_executable(279 "Perfect Squares/279.cpp")
add_executable(198 "House Robber/198.cpp")
add_executable(438 "Find All Anagrams in a String/438.cpp")
add_executable(155 "Min Stack/155.cpp")
add_executable(200 "Number of Islands/200.cpp")
add_executable(105 "Construct Binary Tree from Preorder and Inorder Traversal/105.cpp")
add_executable(160 "Intersection of Two Linked Lists/160.cpp")
